# pe_cpp

./: README.md
first_task/: README.md
first_task/sources/: CMakeLists.txt  main.cc
first_task/sources/mainwindow/: mainwindow.cc  mainwindow.hh  mainwindow.ui
second_task/resources/: texture.qrc
second_task/sources/: CMakeLists.txt  main.cc
second_task/sources/drawwindow/: drawwindow.cc  drawwindow.hh  drawwindow.ui  render.cc  render.hh
second_task/sources/mainwindow/: mainwindow.cc  mainwindow.hh  mainwindow.ui
second_task/sources/mousewindow/: mousewindow.cc  mousewindow.hh  mousewindow.ui
third_task/: CMakeLists.txt  task.md
third_task/include/: Editor.hh  MainWindow.hh  Polygon.hh  RenderArea.hh
third_task/sources/: CMakeLists.txt  Editor.cc  MainWindow.cc  Polygon.cc  RenderArea.cc  main.cc
